update path to photo

--- a/inDest/index.html
+++ b/inDest/index.html
@@ -33,9 +33,7 @@
    </header>
    <main class="main">
       <section class="section top">
-         <picture>
-            <source srcset="./img/big/top-bg.webp" type="image/webp"><img src="./img/big/top-bg.png"
-               alt="background photo" class="top__bg"></picture>
+         <img src="./img/big/top-bg.png" alt="background photo" class="top__bg">
          <div class="top__info">
             <p class="top__subtext">subtext</p>
             <h1 class="heading top__heading heading--white"> Proactively sell targeted <span
