added pages "posts' and 'wot we do'

--- a/indest-1/about.html
+++ b/indest-1/about.html
@@ -8,7 +8,7 @@
    <link rel="preconnect" href="https://fonts.gstatic.com">
    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;900&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="css/style.min.css">
-   <title>inDest</title>
+   <title>About Us</title>
 </head>
 
 <body>
@@ -36,36 +36,74 @@
       </div>
    </header>
    <main class="main">
-      <section class="top top--home">
+      <section class="top">
          <picture>
-            <source srcset="./img/big/top-bg.webp" type="image/webp"><img src="./img/big/top-bg.png"
+            <source srcset="././img/big/aboutTop2.webp" type="image/webp"><img src="././img/big/aboutTop2.png"
                alt="background photo" class="top__bg"></picture>
          <div class="top__info">
-            <p class="top__subtext">subtext</p>
-            <h1 class="heading top__heading heading--white"> Proactively sell targeted <span
-                  class="top__heading--color">in-destination products</span> when your traveler is at the destination
-            </h1> <button class="top__button button">contact us</button>
+            <h1 class="heading top__heading heading--white"> What We Do </h1>
+            <p class="paragraph top__paragraph"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed elit
+               at leo vestibulum eleifend in in dolor. Quisque id nisl vel mauris feugiat gravida quis sit amet purus.
+               Nunc vulputate orci vitae nisi ultricies porta. Nulla quis lacus dapibus, vulputate justo quis, dapibus
+               eros. </p>
          </div> <a href="#" class="top__button-more"> scroll for more </a>
       </section>
-      <section class="section aboutUs">
-         <div class="aboutUs__info">
-            <p class="opacity-text aboutUs__opacity-text"> About<br class="br"> us </p>
-            <h2 class="heading heading-sub aboutUs__heading-sub"> Lorem ipsum dolor </h2>
-            <h1 class="heading aboutUs__heading"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </h1>
-            <picture>
-               <source srcset="./img/photo1.webp" type="image/webp"><img src="./img/photo1.png"
-                  alt="photo girl with map" class="aboutUs__info-photo"></picture>
-            <p class="paragraph aboutUs__paragraph"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-               pharetra sit amet lectus id lacinia. Nulla vel tincidunt tellus. Ut lacinia facilisis egestas. Cras quis
-               enim sit amet risus dictum porta vel sed justo. Donec elementum libero ultricies tortor convallis
-               viverra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis ex magna. Curabitur sed
-               vulputate nunc, et volutpat massa. Maecenas pharetra sem felis, eget accumsan elit ornare eget sodales
-               justo sed elementum efficitur. Nullam lacinia auctor ex, et fermentum lectus tempor lobortis. </p>
-            <button class="button aboutUs__button"> read more </button>
+      <section class="section aboutInfo">
+         <ul class="aboutInfo__list">
+            <li class="aboutInfo__item">
+               <div class="aboutInfo__text">
+                  <p class="opacity-text aboutInfo__opacity-text">Imagine..</p>
+                  <p class="paragraph aboutInfo__paragraph"> If you could proactively offer your traveler to book
+                     targeted indoor activities on a rainy day </p>
+               </div>
+               <div class="aboutInfo__photo">
+                  <picture>
+                     <source srcset="././img/about1.webp" type="image/webp"><img src="././img/about1.png"
+                        alt="about Info photo"></picture>
+               </div>
+            </li>
+            <li class="aboutInfo__item">
+               <div class="aboutInfo__text">
+                  <p class="opacity-text aboutInfo__opacity-text">Imagine..</p>
+                  <p class="paragraph aboutInfo__paragraph"> If you could proactively offer your traveler to book
+                     targeted indoor activities on a rainy day </p>
+               </div>
+               <div class="aboutInfo__photo">
+                  <picture>
+                     <source srcset="././img/about2.webp" type="image/webp"><img src="././img/about2.png"
+                        alt="about Info photo"></picture>
+               </div>
+            </li>
+            <li class="aboutInfo__item">
+               <div class="aboutInfo__text">
+                  <p class="opacity-text aboutInfo__opacity-text">Imagine..</p>
+                  <p class="paragraph aboutInfo__paragraph"> If you could proactively offer your traveler to book
+                     targeted indoor activities on a rainy day </p>
+               </div>
+               <div class="aboutInfo__photo">
+                  <picture>
+                     <source srcset="././img/about3.webp" type="image/webp"><img src="././img/about3.png"
+                        alt="about Info photo"></picture>
+               </div>
+            </li>
+            <li class="aboutInfo__item">
+               <div class="aboutInfo__text">
+                  <p class="opacity-text aboutInfo__opacity-text">Imagine..</p>
+                  <p class="paragraph aboutInfo__paragraph"> If you could proactively offer your traveler to book
+                     targeted indoor activities on a rainy day </p>
+               </div>
+               <div class="aboutInfo__photo">
+                  <picture>
+                     <source srcset="././img/about4.webp" type="image/webp"><img src="././img/about4.png"
+                        alt="about Info photo"></picture>
+               </div>
+            </li>
+         </ul>
+         <div class="aboutInfo__text">
+            <p class="opacity-text aboutInfo__opacity-text">How?</p>
+            <p class="paragraph aboutInfo__paragraph"> Using our unique platform that proactively gives you the
+               possibility to offer tailor-made offers to the right audience at the right time </p>
          </div>
-         <picture>
-            <source srcset="./img/photo1.webp" type="image/webp"><img src="./img/photo1.png" alt="photo girl with map"
-               class="aboutUs__photo"></picture>
       </section>
       <section class="section services">
          <div class="services__text">
@@ -133,109 +171,12 @@
             </li>
          </ul>
       </section>
-      <section class="section insights">
-         <div class="insights__info">
-            <p class="opacity-text insights__opacity-text"> insights </p>
-            <h2 class="heading heading-sub insights__heading-sub"> Lorem ipsum dolor </h2>
-            <h1 class="heading insights__heading"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. </h1>
-         </div>
-         <div class="insights__slider slider">
-            <div class="insights__slide slider__card card">
-               <div class="card__photo">
-                  <picture>
-                     <source srcset="./img/post-photo.webp" type="image/webp"><img src="./img/post-photo.png"
-                        alt="post photo"></picture>
-               </div>
-               <div class="heading card__heading"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
-               <p class="paragraph paragraph-sub card__paragraph"> Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit. Morbi pharetra sit amet lectus id lacinia. Nulla vel tincidunt tellus. </p>
-            </div>
-            <div class="insights__slide slider__card card">
-               <div class="card__photo">
-                  <picture>
-                     <source srcset="./img/post-photo.webp" type="image/webp"><img src="./img/post-photo.png"
-                        alt="post photo"></picture>
-               </div>
-               <div class="heading card__heading"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. </div>
-               <p class="paragraph paragraph-sub card__paragraph"> Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit. Morbi pharetra sit amet lectus id lacinia. Nulla vel tincidunt tellus. </p>
-            </div>
-            <div class="insights__slide slider__card card">
-               <div class="card__photo">
-                  <picture>
-                     <source srcset="./img/post-photo.webp" type="image/webp"><img src="./img/post-photo.png"
-                        alt="post photo"></picture>
-               </div>
-               <div class="heading card__heading"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. </div>
-               <p class="paragraph paragraph-sub card__paragraph"> Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit. Morbi pharetra sit amet lectus id lacinia. Nulla vel tincidunt tellus. </p>
-            </div>
-            <div class="insights__slide slider__card card">
-               <div class="card__photo">
-                  <picture>
-                     <source srcset="./img/post-photo.webp" type="image/webp"><img src="./img/post-photo.png"
-                        alt="post photo"></picture>
-               </div>
-               <div class="heading card__heading"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. </div>
-               <p class="paragraph paragraph-sub card__paragraph"> Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit. Morbi pharetra sit amet lectus id lacinia. Nulla vel tincidunt tellus. </p>
-            </div>
-         </div>
-      </section>
-      <section class="section partners">
-         <div class="partners__info">
-            <p class="opacity-text partners__opacity-text"> partners </p>
-            <h1 class="heading partners__heading"> We work with the best from the best. </h1>
-            <p class="paragraph partners__paragraph"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-               tempor est ut nulla pulvinar, interdum porttitor tellus condimentum. </p>
-         </div>
-         <ul class="partners__list">
-            <li class="partners__item">
-               <picture>
-                  <source srcset="./img/partner1.webp" type="image/webp"><img src="./img/partner1.png"
-                     alt="partner icon" class="partners__icon"></picture>
-            </li>
-            <li class="partners__item">
-               <picture>
-                  <source srcset="./img/partner2.webp" type="image/webp"><img src="./img/partner2.png"
-                     alt="partner icon" class="partners__icon"></picture>
-            </li>
-            <li class="partners__item">
-               <picture>
-                  <source srcset="./img/partner1.webp" type="image/webp"><img src="./img/partner1.png"
-                     alt="partner icon" class="partners__icon"></picture>
-            </li>
-            <li class="partners__item">
-               <picture>
-                  <source srcset="./img/partner2.webp" type="image/webp"><img src="./img/partner2.png"
-                     alt="partner icon" class="partners__icon"></picture>
-            </li>
-            <li class="partners__item">
-               <picture>
-                  <source srcset="./img/partner1.webp" type="image/webp"><img src="./img/partner1.png"
-                     alt="partner icon" class="partners__icon"></picture>
-            </li>
-            <li class="partners__item">
-               <picture>
-                  <source srcset="./img/partner2.webp" type="image/webp"><img src="./img/partner2.png"
-                     alt="partner icon" class="partners__icon"></picture>
-            </li>
-            <li class="partners__item">
-               <picture>
-                  <source srcset="./img/partner1.webp" type="image/webp"><img src="./img/partner1.png"
-                     alt="partner icon" class="partners__icon"></picture>
-            </li>
-            <li class="partners__item">
-               <picture>
-                  <source srcset="./img/partner2.webp" type="image/webp"><img src="./img/partner2.png"
-                     alt="partner icon" class="partners__icon"></picture>
-            </li>
-            <li class="partners__item">
-               <picture>
-                  <source srcset="./img/partner1.webp" type="image/webp"><img src="./img/partner1.png"
-                     alt="partner icon" class="partners__icon"></picture>
-            </li>
-         </ul>
+      <section class="section aboutLastBlock">
+         <h1 class="heading aboutLastBlock__heading"> Have you thought about <br> what that gives you in conversion and
+            value add for your customers? </h1>
+         <p class="paragraph aboutLastBlock__paragraph"> We have thought a lot about it.<br> And the result is.. </p>
+         <h1 class="heading aboutLastBlock__heading"> Our unique platform called </h1> <a href="././index.html"
+            class="aboutLastBlock__logo icon-logo"></a>
       </section>
       <section class="section application">
          <picture>
