--- a/indest-1/index.html
+++ b/indest-1/index.html
@@ -280,9 +280,9 @@
          <p class="footer__mateBy"> Created by <b><a href="https://webtune.com.ua/">WebTune</a></b> </p>
       </div>
    </footer>
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-   <script src="./js/jquery.simplePagination.js"></script>
-   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+   <script src="./js/jquery-3.5.1.min.js"></script>
+   <script src="./js/jquery.simplePagination.min.js"></script>
+   <script src="./js/slick.min.js"></script>
    <script src="./js/script.min.js"></script>
 </body>
 
