--- a/indest-1/insights.html
+++ b/indest-1/insights.html
@@ -61,8 +61,8 @@
             <li class="posts__item post">
                <div class="post__photo"> <a href="#">
                      <picture>
-                        <source srcset="././img/post-photo2.webp" type="image/webp"><img
-                           src="././img/post-photo2.png" alt="post photo"></picture>
+                        <source srcset="././img/post-photo3.webp" type="image/webp"><img
+                           src="././img/post-photo3.png" alt="post photo"></picture>
                   </a> </div>
                <div class="post__info">
                   <div class="post__head head">
@@ -109,8 +109,8 @@
             <li class="posts__item post">
                <div class="post__photo"> <a href="#">
                      <picture>
-                        <source srcset="././img/post-photo2.webp" type="image/webp"><img
-                           src="././img/post-photo2.png" alt="post photo"></picture>
+                        <source srcset="././img/post-photo3.webp" type="image/webp"><img
+                           src="././img/post-photo3.png" alt="post photo"></picture>
                   </a> </div>
                <div class="post__info">
                   <div class="post__head head">
@@ -157,8 +157,8 @@
             <li class="posts__item post">
                <div class="post__photo"> <a href="#">
                      <picture>
-                        <source srcset="././img/post-photo2.webp" type="image/webp"><img
-                           src="././img/post-photo2.png" alt="post photo"></picture>
+                        <source srcset="././img/post-photo3.webp" type="image/webp"><img
+                           src="././img/post-photo3.png" alt="post photo"></picture>
                   </a> </div>
                <div class="post__info">
                   <div class="post__head head">
@@ -205,8 +205,8 @@
             <li class="posts__item post">
                <div class="post__photo"> <a href="#">
                      <picture>
-                        <source srcset="././img/post-photo2.webp" type="image/webp"><img
-                           src="././img/post-photo2.png" alt="post photo"></picture>
+                        <source srcset="././img/post-photo3.webp" type="image/webp"><img
+                           src="././img/post-photo3.png" alt="post photo"></picture>
                   </a> </div>
                <div class="post__info">
                   <div class="post__head head">
@@ -253,8 +253,8 @@
             <li class="posts__item post">
                <div class="post__photo"> <a href="#">
                      <picture>
-                        <source srcset="././img/post-photo2.webp" type="image/webp"><img
-                           src="././img/post-photo2.png" alt="post photo"></picture>
+                        <source srcset="././img/post-photo3.webp" type="image/webp"><img
+                           src="././img/post-photo3.png" alt="post photo"></picture>
                   </a> </div>
                <div class="post__info">
                   <div class="post__head head">
@@ -301,8 +301,8 @@
             <li class="posts__item post">
                <div class="post__photo"> <a href="#">
                      <picture>
-                        <source srcset="././img/post-photo2.webp" type="image/webp"><img
-                           src="././img/post-photo2.png" alt="post photo"></picture>
+                        <source srcset="././img/post-photo3.webp" type="image/webp"><img
+                           src="././img/post-photo3.png" alt="post photo"></picture>
                   </a> </div>
                <div class="post__info">
                   <div class="post__head head">
@@ -349,8 +349,8 @@
             <li class="posts__item post">
                <div class="post__photo"> <a href="#">
                      <picture>
-                        <source srcset="././img/post-photo2.webp" type="image/webp"><img
-                           src="././img/post-photo2.png" alt="post photo"></picture>
+                        <source srcset="././img/post-photo3.webp" type="image/webp"><img
+                           src="././img/post-photo3.png" alt="post photo"></picture>
                   </a> </div>
                <div class="post__info">
                   <div class="post__head head">
@@ -397,8 +397,8 @@
             <li class="posts__item post">
                <div class="post__photo"> <a href="#">
                      <picture>
-                        <source srcset="././img/post-photo2.webp" type="image/webp"><img
-                           src="././img/post-photo2.png" alt="post photo"></picture>
+                        <source srcset="././img/post-photo3.webp" type="image/webp"><img
+                           src="././img/post-photo3.png" alt="post photo"></picture>
                   </a> </div>
                <div class="post__info">
                   <div class="post__head head">
@@ -488,9 +488,9 @@
          <p class="footer__mateBy"> Created by <b><a href="https://webtune.com.ua/">WebTune</a></b> </p>
       </div>
    </footer>
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-   <script src="./js/jquery.simplePagination.js"></script>
-   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+   <script src="./js/jquery-3.5.1.min.js"></script>
+   <script src="./js/jquery.simplePagination.min.js"></script>
+   <script src="./js/slick.min.js"></script>
    <script src="./js/script.min.js"></script>
 </body>
 
