added social icons

--- a/svit-mandriv/index.html
+++ b/svit-mandriv/index.html
@@ -39,7 +39,19 @@
                <p>+38 (093) 686 8677</p>
             </a>
          </div>
-   
+
+         <div class="topLine__social">
+            <div class="topLine__title">
+               Ми у соцмережах:
+            </div>
+            <a href="https://www.facebook.com/vsesanatorii">
+               <span class="icon-facebook topLine__socialIcon"></span>
+            </a>
+            <a href="https://www.instagram.com/vsesanatorii_ua/">
+               <span class="icon-insta topLine__socialIcon"></span>
+            </a>
+         </div>
+
          <div class="topLine__right">
             <div class="topLine__pay">
                <a href="#">
@@ -13108,6 +13120,17 @@
             <a href="#">Тури та укскурсії</a>
             <a href="#">Дитячі табори</a>
             <a href="#">Підбір туру</a>
+         </div>
+
+         <div class="footer__column">
+            <div class="footer__social">
+               <a href="https://www.facebook.com/vsesanatorii">
+                  <span class="icon-facebook footer__socialIcon"></span>
+               </a>
+               <a href="https://www.instagram.com/vsesanatorii_ua/">
+                  <span class="icon-insta footer__socialIcon"></span>
+               </a>
+            </div>
          </div>
       </div>
    </div>
