--- a/ular-last/index.html
+++ b/ular-last/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="css/style.min.css">
-   <title>Ular</title>
-</head>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="css/style.min.css">
+      <title>Ular</title>
+   </head>
 
-<body>
-   <header class="header">
+   <body>
+      <header class="header">
    <div class="header__logo">
-     <a href="#">
+     <a href="./index.html">
        <img
          src="./img/header-logo.png"
          alt="incubation Logo"
@@ -21,99 +21,105 @@
    </div>
 
    <div class="header__right">
-     <nav class="header__nav">
-       <ul class="primary-menu nav__list">
-         <li class="nav__item menu-item">
-           <a
-             href="#"
-             class="nav__link menu-item__link"
-           >
-             Про компанію
-           </a>
-         </li>
+      <nav class="header__nav">
+         <ul class="primary-menu nav__list">
+            <li class="nav__item menu-item">
+               <a
+                  href="./about-us.html"
+                  class="nav__link menu-item__link"
+               >
+                  Про компанію
+               </a>
+            </li>
 
-         <li class="nav__item menu-item">
-            <a
-              href="#"
-              class="nav__link menu-item__link"
-            >
-              Продукція
-            </a>
-         </li>
+            <li class="nav__item menu-item">
+               <a
+                  href="#"
+                  class="nav__link menu-item__link"
+               >
+                  Продукція
+               </a>
+            </li>
 
-         <li class="nav__item menu-item">
-           <a
-             href="#"
-             class="nav__link menu-item__link"
-           >
-             Галерея
-           </a>
-         </li>
+            <li class="nav__item menu-item">
+               <a
+                  href="#"
+                  class="nav__link menu-item__link"
+               >
+                  Галерея
+               </a>
+            </li>
 
-         <li class="nav__item menu-item">
-           <a
-             href="#"
-             class="nav__link menu-item__link"
-           >
-             Контакти
-           </a>
-         </li>
+            <li class="nav__item menu-item">
+               <a
+                  href="#"
+                  class="nav__link menu-item__link"
+               >
+                  Контакти
+               </a>
+            </li>
 
-         <li class="nav__item menu-item">
-            <a
-              href="#"
-              class="nav__link menu-item__link"
-            >
-              Тендери
-            </a>
-         </li>
+            <li class="nav__item menu-item">
+               <a
+                  href="#"
+                  class="nav__link menu-item__link"
+               >
+                  Тендери
+               </a>
+            </li>
 
-         <li class="nav__item menu-item">
-            <a
-              href="#"
-              class="nav__link menu-item__link"
-            >
-              Партнери
-            </a>
-         </li>
+            <li class="nav__item menu-item">
+               <a
+                  href="#"
+                  class="nav__link menu-item__link"
+               >
+                  Партнери
+               </a>
+            </li>
 
-         <li class="nav__item menu-item">
-            <a
-              href="#"
-              class="nav__link menu-item__link"
-            >
-              Вакансії
-            </a>
-         </li>
-       </ul>
-     </nav>
+            <li class="nav__item menu-item">
+               <a
+                  href="./vacancy.html"
+                  class="nav__link menu-item__link"
+               >
+                  Вакансії
+               </a>
+            </li>
+         </ul>
+      </nav>
 
-     <div class="header__lang lang">
-       <span class="lang__arrow">&#62;</span>
-       <div class="lang__list">
-         <p class="lang__item lang__item--active">UA</p>
-         <p class="lang__item">RU</p>
-         <p class="lang__item">EN</p>
-       </div>
-     </div>
+      <div class="header__lang lang">
+         <span class="lang__arrow">&#62;</span>
+
+         <div class="lang__list">
+            <p class="lang__item lang__item--active">UA</p>
+            <p class="lang__item">RU</p>
+            <p class="lang__item">EN</p>
+         </div>
+      </div>
    </div>
 </header>
 
-   <main class="main">
-      <section class="section head">
+      <main class="main">
+         <section class="section head">
    <div class="head__left">
      <div class="head__info">
        <h1 class="head__heading main-heading">
          ФГ Улар
        </h1>
+
        <h3 class="head__heading-second heading">
          Виробництво м’яса курчат бройлерів
        </h3>
-       <p class="head__text paragraph">
-         Фермерське господарство «Улар» з 2003-го року 
-         є провідним виробником та постачальником
-         м’яса птиці в Україні. 
-       </p>
+
+       <div class="head__text paragraph">
+         <p>
+           Фермерське господарство «Улар» з 2003-го року 
+           є провідним виробником та постачальником
+           м’яса птиці в Україні. 
+         </p>
+       </div>
+
        <button class="head__button button">Перейти в каталог</button>
      </div>
 
@@ -121,22 +127,36 @@
        <h3 class="head__heading heading">
          Наші компанії
        </h3>
+
        <div class="head__list">
-         <a href="#" class="head__item">
+
+         <a href="http://google.com" class="head__item">
            <img src="././img/home/header-link-photo--1.jpg" alt="list photo">
-           <p class="head__item-text">Зерновий елеватор</p>
+
+           <div class="head__item-text">
+               <p>Зерновий елеватор</p>
+           </div>
          </a>
+
          <a href="#" class="head__item">
            <img src="././img/home/header-link-photo--2.png" alt="list photo">
-           <p class="head__item-text">Інкубація</p>
+           <div class="head__item-text">
+               <p>Інкубація</p>
+           </div>
          </a>
+
          <a href="#" class="head__item">
            <img src="././img/home/header-link-photo--3.png" alt="list photo">
-           <p class="head__item-text">Виробництво комбікормів</p>
+           <div class="head__item-text">
+               <p>Виробництво комбікормів</p>
+           </div>
          </a>
+
          <a href="#" class="head__item">
            <img src="././img/home/header-link-photo--4.png" alt="list photo">
-           <p class="head__item-text">Вирощування зернових та олійних культур</p>
+           <div class="head__item-text">
+               <p>Вирощування зернових та олійних культур</p>
+           </div>
          </a>
        </div>
      </div>
@@ -150,7 +170,7 @@
       >
    </div>
 </section>
-      <section class="section advantage">
+         <section class="section advantage">
    <ul class="advantage__list">
      <li class="advantage__item">
        <div class="advantage__image">
@@ -159,9 +179,9 @@
            alt="chicken icon"
          >
        </div>
-       <p class="advantage__title heading">
+       <h3 class="advantage__title heading">
          Якісний підхід
-       </p>
+       </h3>
      </li>
 
      <li class="advantage__item">
@@ -171,9 +191,9 @@
            alt="build icon"
          >
        </div>
-       <p class="advantage__title heading">
+       <h3 class="advantage__title heading">
          Натуральна продукція
-       </p>
+       </h3>
      </li>
 
      <li class="advantage__item">
@@ -183,13 +203,13 @@
            class="advantage__img"
          >
        </div>
-       <p class="advantage__title heading">
+       <h3 class="advantage__title heading">
          Робимо як для себе
-       </p>
+       </h3>
      </li>
    </ul>
  </section>
-      <section class="section photo-slider">
+         <section class="section photo-slider">
    <div class="photo-slider__top">
      <h2 class="photo-slider__heading section-heading">
       Лише
@@ -284,7 +304,7 @@
      Детальніше Про Нас
    </button>
 </section>
-      <section class="section our-products">
+         <section class="section our-products">
    <div class="our-products__info">
       <h2 class="our-products__heading section-heading">
          Наша продукцiя
@@ -505,7 +525,7 @@
       </div>
    </div>
 </section>
-      <section class="section contact-form">
+         <section class="section contact-form">
    <div class="contact-form__row">
      <div class="contact-form__text">
        <h3 class="contact-form__heading heading">
@@ -579,9 +599,9 @@
      </button>
    </form>
 </section>
-   </main>
+      </main>
 
-   <footer class="section footer">
+      <footer class="section footer">
    <div class="footer__row">
       <div class="footer__logo footer__item">
          <a href="#">
@@ -685,10 +705,10 @@
       </p>
    </div>
 </footer>
-   <script src="./js/jquery-3.5.1.min.js"></script>
+      <script src="./js/jquery-3.5.1.min.js"></script>
 <script src="./js/jquery.simplePagination.min.js"></script>
 <script src="./js/slick.min.js"></script>
 <script src="./js/script.min.js"></script>
-</body>
+   </body>
 
 </html>
