added pages product, products, partners, contacts

--- a/ular-last/index.html
+++ b/ular-last/index.html
@@ -52,7 +52,7 @@
 
             <li class="nav__item menu-item">
                <a
-                  href="#"
+                  href="./contacts.html"
                   class="nav__link menu-item__link"
                >
                   Контакти
@@ -70,7 +70,7 @@
 
             <li class="nav__item menu-item">
                <a
-                  href="#"
+                  href="./partners.html"
                   class="nav__link menu-item__link"
                >
                   Партнери
@@ -101,7 +101,7 @@
 </header>
 
       <main class="main">
-         <section class="section head">
+         <section class="section section--head head">
    <div class="head__left">
      <div class="head__info">
        <h1 class="head__heading main-heading">
@@ -120,7 +120,7 @@
          </p>
        </div>
 
-       <button class="head__button button">Перейти в каталог</button>
+       <a href="./products.html" class="head__button button">Перейти в каталог</a>
      </div>
 
      <div class="head__others">
@@ -300,9 +300,9 @@
      </div>
    </div>
 
-   <button class="photo-slider__button button">
+   <a href="./about-us.html" class="photo-slider__button button">
      Детальніше Про Нас
-   </button>
+   </a>
 </section>
          <section class="section our-products">
    <div class="our-products__info">
@@ -506,22 +506,28 @@
          </div>
       </div>
 
-      <button class="button our-products__button">
+      <a href="./products.html" class="button our-products__button">
          Усі товари
-      </button>
+      </a>
    </div>
 
    <div class="our-products__photos photos">
       <div class="photos__item">
-         <img src="././img/home/product-photo.png" alt="product-photo">
+         <a href="./product.html">
+            <img src="././img/home/product-photo.png" alt="product-photo">
+         </a>
       </div>
 
       <div class="photos__item">
-         <img src="././img/home/product-photo.png" alt="product-photo">
+         <a href="./product.html">
+            <img src="././img/home/product-photo.png" alt="product-photo">
+         </a>
       </div>
 
       <div class="photos__item">
-         <img src="././img/home/product-photo.png" alt="product-photo">
+         <a href="./product.html">
+            <img src="././img/home/product-photo.png" alt="product-photo">
+         </a>
       </div>
    </div>
 </section>
