--- a/ular-last/vacancy.html
+++ b/ular-last/vacancy.html
@@ -50,7 +50,7 @@
 
             <li class="nav__item menu-item">
                <a
-                  href="#"
+                  href="./contacts.html"
                   class="nav__link menu-item__link"
                >
                   Контакти
@@ -68,7 +68,7 @@
 
             <li class="nav__item menu-item">
                <a
-                  href="#"
+                  href="./partners.html"
                   class="nav__link menu-item__link"
                >
                   Партнери
@@ -99,7 +99,7 @@
 </header>
 
    <main class="main">
-      <section class="section vacancy">
+      <section class="section section--head vacancy">
    <div class="path">
    <ul class="path__list">
       <li class="info-text path__item">
@@ -550,9 +550,7 @@
    
          <div class="vacancy__buttons">
             <button class="form__button button">Надіслати</button>
-            <!-- <input class="form__button button button--load" type="file">
-            <button class="form__button button button--load">Завантажте ваше резюме</button> -->
-   
+
             <div class="input__wrapper">
                <input 
                   type="file" 
