added page gallery

--- a/ular-last/about-us.html
+++ b/ular-last/about-us.html
@@ -41,7 +41,7 @@
 
             <li class="nav__item menu-item">
                <a
-                  href="#"
+                  href="./gallery.html"
                   class="nav__link menu-item__link"
                >
                   Галерея
@@ -131,7 +131,7 @@
 
    <div class="head__photo">
       <img
-        src="./img/home/head-photo.png"
+        src="././img/home/head-photo.png"
         alt="Products"
         class="head__img"
       >
@@ -157,7 +157,7 @@
    <div class="photo-slider__slider slider">
      <div class="slider__item">
        <img
-         src="./img/products/1.png"
+         src="././img/products/1.png"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -165,7 +165,7 @@
 
      <div class="slider__item">
        <img
-         src="./img/products/2.png"
+         src="././img/products/2.png"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -173,7 +173,7 @@
 
      <div class="slider__item">
        <img
-         src="./img/products/3.png"
+         src="././img/products/3.png"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -181,7 +181,7 @@
 
      <div class="slider__item">
        <img
-         src="./img/products/4.png"
+         src="././img/products/4.png"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -189,7 +189,7 @@
 
      <div class="slider__item">
        <img
-         src="./img/products/1.png"
+         src="././img/products/1.png"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -197,7 +197,7 @@
 
      <div class="slider__item">
        <img
-         src="./img/products/2.png"
+         src="././img/products/2.png"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -205,7 +205,7 @@
 
      <div class="slider__item">
        <img
-         src="./img/products/3.png"
+         src="././img/products/3.png"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -213,7 +213,7 @@
 
      <div class="slider__item">
        <img
-         src="./img/products/4.png"
+         src="././img/products/4.png"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -221,7 +221,7 @@
 
      <div class="slider__item">
        <img
-         src="./img/products/1.png"
+         src="././img/products/1.png"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -235,7 +235,7 @@
       <section class="section awards">
    <ul class="awards__list">
       <li class="awards__item">
-         <img src="./img/iso220002005.png" alt="award icon">
+         <img src="././img/iso220002005.png" alt="award icon">
          <p>
             Сертифікат ISO 22000 : 2005 — Господарство успішно пройшло сертифікаційний аудит по системі
             менеджменту безпеки харчових продуктів
@@ -243,7 +243,7 @@
       </li>
 
       <li class="awards__item">
-         <img src="./img/halal.png" alt="award icon">
+         <img src="././img/halal.png" alt="award icon">
          <p>
             Сертифікат HALAL — єдиний документ, що дає можливість експортувати у країни арабсько-мусульманського світу та
             підтверджує, що продукт відповідає високим стандартам Шаріату
@@ -275,7 +275,7 @@
 
    <ul class="geography__list">
       <li class="geography__item">
-         <img src="./img/flag/UA.png" alt="">
+         <img src="././img/flag/UA.png" alt="">
          <div class="geography__text paragraph">
             <p>
                Україна
@@ -284,7 +284,7 @@
       </li>
 
       <li class="geography__item">
-         <img src="./img/flag/Mask Group.png" alt="">
+         <img src="././img/flag/Mask Group.png" alt="">
          <div class="geography__text paragraph">
             <p>
                Молдова
@@ -293,7 +293,7 @@
       </li>
 
       <li class="geography__item">
-         <img src="./img/flag/TR.png" alt="">
+         <img src="././img/flag/TR.png" alt="">
          <div class="geography__text paragraph">
             <p>
                Туреччина
@@ -302,7 +302,7 @@
       </li>
 
       <li class="geography__item">
-         <img src="./img/flag/AZ.png" alt="">
+         <img src="././img/flag/AZ.png" alt="">
          <div class="geography__text paragraph">
             <p>
                Азербайджан
@@ -311,7 +311,7 @@
       </li>
 
       <li class="geography__item">
-         <img src="./img/flag/EG.png" alt="">
+         <img src="././img/flag/EG.png" alt="">
          <div class="geography__text paragraph">
             <p>
                Єгипет
@@ -320,7 +320,7 @@
       </li>
 
       <li class="geography__item">
-         <img src="./img/flag/CN.png" alt="">
+         <img src="././img/flag/CN.png" alt="">
          <div class="geography__text paragraph">
             <p>
                Китай
@@ -329,7 +329,7 @@
       </li>
 
       <li class="geography__item">
-         <img src="./img/flag/VN.png" alt="">
+         <img src="././img/flag/VN.png" alt="">
          <div class="geography__text paragraph">
             <p>
                В’єтнам
@@ -338,7 +338,7 @@
       </li>
 
       <li class="geography__item">
-         <img src="./img/flag/HK.png" alt="">
+         <img src="././img/flag/HK.png" alt="">
          <div class="geography__text paragraph">
             <p>
                Гонгконг
@@ -347,7 +347,7 @@
       </li>
 
       <li class="geography__item">
-         <img src="./img/flag/UZ.png" alt="">
+         <img src="././img/flag/UZ.png" alt="">
          <div class="geography__text paragraph">
             <p>
                Узбекістан
@@ -356,7 +356,7 @@
       </li>
 
       <li class="geography__item">
-         <img src="./img/flag/IR.png" alt="">
+         <img src="././img/flag/IR.png" alt="">
          <div class="geography__text paragraph">
             <p>
                Ірак
