--- a/ular-last/galery.html
+++ b/ular-last/galery.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="css/style.min.css">
-   <title>Вакансії</title>
+   <title>Галерея</title>
 </head>
 <body>
    <header class="header">
@@ -41,7 +41,7 @@
 
             <li class="nav__item menu-item">
                <a
-                  href="./gallery.html"
+                  href="#"
                   class="nav__link menu-item__link"
                >
                   Галерея
