--- a/ular-last/products.html
+++ b/ular-last/products.html
@@ -41,7 +41,7 @@
 
             <li class="nav__item menu-item">
                <a
-                  href="#"
+                  href="./gallery.html"
                   class="nav__link menu-item__link"
                >
                   Галерея
