--- a/ular-last/about-us.html
+++ b/ular-last/about-us.html
@@ -32,7 +32,7 @@
 
             <li class="nav__item menu-item">
                <a
-                  href="#"
+                  href="./products.html"
                   class="nav__link menu-item__link"
                >
                   Продукція
