added pages 404, entOk, and added popup from product page

--- a/ular-last/product.html
+++ b/ular-last/product.html
@@ -209,6 +209,65 @@
          Замовити
       </button>
    </div>
+
+   <div id="popup-overly" class="popup-overly">
+   <div class="popup">
+
+      <div class="form__head">
+         <p></p>
+         <div class="form__close">
+            <span></span>
+            <span></span>
+         </div>
+      </div>
+   
+      <div class="popup__content">
+         <div class="popup__photo">
+            <img src="./img/products/1.png" alt="">
+         </div>
+   
+         <form
+           action=""
+           class="product__form form"
+         >
+            <div class="paragraph form__paragraph">
+               <p>
+                  Ця заявка потрібна лише для першого контакту,
+                  надалі ми зв’яжемося з вами та узгодимо усі деталі
+               </p>
+            </div>
+   
+            <input
+               type="text"
+               class="input product__input"
+               placeholder="Ваше ім’я та прізвище"
+               required
+            >
+            <input
+               type="email"
+               class="input product__input"
+               placeholder="Ваш Email"
+               required
+            >
+            <input
+               type="phone"
+               class="input product__input"
+               placeholder="Мобільний телефон"
+               required
+            >
+            <textarea
+               placeholder="Ваше повідомлення"
+               class="input product__input product__input--textarea"
+               required
+            ></textarea>
+   
+            <div class="product__buttons">
+               <button class="form__button button">Надіслати</button>
+            </div>
+         </form>
+      </div>
+   </div>
+</div>
 </section>
       <section class="section similar photo-slider">
    <h2 class="similar__heading section-heading">
