--- a/ular-last/sentOk.html
+++ b/ular-last/sentOk.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="css/style.min.css">
-   <title>404</title>
+   <title>Sent Ok</title>
 </head>
 <body>
    <header class="header">
@@ -99,15 +99,19 @@
 </header>
 
    <main class="main">
-      <section class="section section--head error">
-   <h1 class="error__heading">404</h1>
-   <div class="paragraph error__paragraph">
+      <section class="section section--head sentOk">
+   <h1 class="main-heading sentOk__main-heading">
+      Дякуємо, ми отримали вашу заявку
+   </h1>
+
+   <div class="paragraph sentOk__paragraph">
       <p>
-         Вибачте, такої сторінки не існує, поверніться на головну
-         та повторіть вашу спробу ще раз
+         Наш менеджер скоро зателефонує вам та розкаже
+         про наступний етап стосовно вашої вакансії
       </p>
    </div>
-   <a href="./index.html" class="button error__button">
+
+   <a href="./index.html" class="button sentOk__button">
       На головну
    </a>
 </section>;
