added lang menu

--- a/ular-last/index.html
+++ b/ular-last/index.html
@@ -89,10 +89,11 @@
       </nav>
 
       <div class="header__lang lang">
-         <span class="lang__arrow">&#62;</span>
-
-         <div class="lang__list">
-            <p class="lang__item lang__item--active">UA</p>
+         <div class="lang__active">
+            <span class="lang__arrow"></span>
+            <p class="lang__item">UA</p>
+         </div>
+         <div class="lang__active--none">
             <p class="lang__item">RU</p>
             <p class="lang__item">EN</p>
          </div>
